@@ -6,7 +6,7 @@
 %myents;
 ]>
 
-<!-- $Id: PrintInfo.xml,v 1.2 2007/06/08 22:06:10 griph Exp $ -->
+<!-- $Id: PrintInfo.xml,v 1.3 2007/06/10 19:07:26 griph Exp $ -->
 
 <section id='PrintInfo'>
 <title>PrintInfo</title>
@@ -34,6 +34,12 @@ If
 is one or greater the palette used by fvwm is printed.
 If you have a limited color palette, and you run out of colors,
 this command might be helpful.</para>
+
+<para><fvwmopt cmd="PrintInfo" opt="ImageCache"/>
+which prints information about the images loaded by fvwm. If
+<replaceable>verbose</replaceable>
+is one or greater all images in the cache will be listed together
+with their respective reuse.</para>
 
 <para><fvwmopt cmd="PrintInfo" opt="Locale"/>
 which prints information on your locale and the fonts that fvwm
